# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_prebuilt_etc("app_packing_tool") {
  source = "app_packing_tool.jar"
  install_enable = false
}

ohos_prebuilt_etc("app_unpacking_tool") {
  source = "app_unpacking_tool.jar"
  install_enable = false
}

ohos_prebuilt_etc("fastjson_utils_java") {
  source = "fastjson_utils_java.jar"
  install_enable = false
}

ohos_prebuilt_etc("haptobin_tool") {
  source = "haptobin_tool.jar"
  install_enable = false
}
