# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_prebuilt_etc("appSchema_json") {
  source = "app.json"
  install_enable = false
}

ohos_prebuilt_etc("commonEventSchema_json") {
  source = "commonEvents.json"
  install_enable = false
}

ohos_prebuilt_etc("distroFilterSchema_json") {
  source = "distroFilter.json"
  install_enable = false
}

ohos_prebuilt_etc("formsSchema_json") {
  source = "forms.json"
  install_enable = false
}

ohos_prebuilt_etc("moduleSchema_json") {
  source = "module.json"
  install_enable = false
}

ohos_prebuilt_etc("pageSchema_json") {
  source = "pages.json"
  install_enable = false
}

ohos_prebuilt_etc("shortcutsSchema_json") {
  source = "shortcuts.json"
  install_enable = false
}
