#Copyright (c) 2020-2021 Huawei Device Co., Ltd.
#Licensed under the Apache License, Version 2.0 (the "License");
#you may not use this file except in compliance with the License.
#You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
#Unless required by applicable law or agreed to in writing, software
#distributed under the License is distributed on an "AS IS" BASIS,
#WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#See the License for the specific language governing permissions and
#limitations under the License.

import("//build/lite/config/subsystem/aafwk/path.gni")

ACE_LITE_PATH = "//foundation/ace/ace_engine_lite/frameworks"
ACE_LITE_COMMON_PATH = "//foundation/ace/ace_engine_lite/frameworks/common"
NATIVE_ENGINE_PATH = "//foundation/ace/ace_engine_lite/frameworks/native_engine"
MODULE_MANAGER_PATH =
    "//foundation/ace/ace_engine_lite/frameworks/module_manager"
GRAPHIC_LITE_PATH = "//foundation/graphic/ui"

ace_lite_include_dirs = [
  "$GRAPHIC_LITE_PATH/interfaces/kits/config",
  "$GRAPHIC_LITE_PATH/interfaces/kits/animator",
  "$GRAPHIC_LITE_PATH/interfaces/kits/common",
  "$GRAPHIC_LITE_PATH/interfaces/kits/components",
  "$GRAPHIC_LITE_PATH/interfaces/kits/dfx",
  "$GRAPHIC_LITE_PATH/interfaces/kits/events",
  "$GRAPHIC_LITE_PATH/interfaces/kits/font",
  "$GRAPHIC_LITE_PATH/interfaces/kits/layout",
  "$GRAPHIC_LITE_PATH/interfaces/kits/themes",
  "$GRAPHIC_LITE_PATH/interfaces/innerkits/common",
  "//foundation/communication/ipc_lite/interfaces/kits",
  "//utils/native/lite/include",
  "${aafwk_lite_path}/interfaces/kits/ability_lite",
  "${aafwk_lite_path}/interfaces/kits/want_lite",
  "${aafwk_lite_path}/frameworks/abilitymgr_lite/include",
  "${aafwk_lite_path}/interfaces/innerkits/abilitymgr_lite",
  "${appexecfwk_lite_path}/interfaces/kits/bundle_lite",
  "${appexecfwk_lite_path}/utils/bundle_lite",
]

ace_lite_include_dirs += [
  "//third_party/bounds_checking_function/include",
  "//foundation/ace/ace_engine_lite/interfaces/innerkits/builtin/async",
  "//foundation/ace/ace_engine_lite/interfaces/innerkits/builtin/base",
  "//foundation/ace/ace_engine_lite/interfaces/innerkits/builtin/jsi",
  "$ACE_LITE_PATH/include/context",
  "$ACE_LITE_PATH/include/base",
  "$ACE_LITE_PATH/include/modules",
  "$ACE_LITE_PATH/include/resource",
  "$ACE_LITE_PATH/src/core",
  "$ACE_LITE_PATH/src/core/animation",
  "$ACE_LITE_PATH/src/core/base",
  "$ACE_LITE_PATH/src/core/components",
  "$ACE_LITE_PATH/src/core/context",
  "$ACE_LITE_PATH/src/core/directive",
  "$ACE_LITE_PATH/src/core/router",
  "$ACE_LITE_PATH/src/core/modules",
  "$ACE_LITE_PATH/src/core/router",
  "$ACE_LITE_PATH/src/core/stylemgr",
  "$ACE_LITE_PATH/src/core/wrapper",
  "$ACE_LITE_PATH/targets",
  "$ACE_LITE_COMMON_PATH/log",
  "$ACE_LITE_COMMON_PATH/memory",
  "$ACE_LITE_COMMON_PATH/memory/cache",
  "$ACE_LITE_COMMON_PATH/utils",
  "$NATIVE_ENGINE_PATH",
  "$NATIVE_ENGINE_PATH/jsi",
  "$MODULE_MANAGER_PATH",
  "//third_party/jerryscript/jerry-core/include",
  "//third_party/jerryscript/jerry-ext/include/jerryscript-ext",
  "///third_party/jerryscript/jerry-port/default/include",
  "//third_party/cJSON",
  "//third_party/giflib",
  "//utils/native/lite/timer_task/include/",
  "//third_party/freetype/include",
  "//base/global/resmgr_lite/interfaces/innerkits/include",
  "//base/global/i18n_lite/interfaces/kits/i18n/include",
]

ace_lite_include_dirs_simulator = [
  "$GRAPHIC_LITE_PATH/interfaces/kits/config",
  "$GRAPHIC_LITE_PATH/interfaces/kits/ui/animator",
  "$GRAPHIC_LITE_PATH/interfaces/kits/ui/common",
  "$GRAPHIC_LITE_PATH/interfaces/kits/ui/components",
  "$GRAPHIC_LITE_PATH/interfaces/kits/ui/dfx",
  "$GRAPHIC_LITE_PATH/interfaces/kits/ui/events",
  "$GRAPHIC_LITE_PATH/interfaces/kits/ui/font",
  "$GRAPHIC_LITE_PATH/interfaces/kits/ui/layout",
  "$GRAPHIC_LITE_PATH/interfaces/kits/ui/themes",
  "$GRAPHIC_LITE_PATH/interfaces/innerkits/ui/common",
  "//foundation/communication/ipc_lite/interfaces/kits",
  "//base/hiviewdfx/hilog_lite/interfaces/native/kits",
  "${aafwk_lite_path}/frameworks/abilitymgr_lite/include",
  "//foundation/communication/ipc_lite/liteipc/include",
]

ace_lite_sources = [
  "$ACE_LITE_PATH/src/core/animation/transition_impl.cpp",
  "$ACE_LITE_PATH/src/core/base/ace_lock.cpp",
  "$ACE_LITE_PATH/src/core/base/async_task_manager.cpp",
  "$ACE_LITE_PATH/src/core/base/dft_impl.cpp",
  "$ACE_LITE_PATH/src/core/base/dfx_assist.cpp",
  "$ACE_LITE_PATH/src/core/base/event_util.cpp",
  "$ACE_LITE_PATH/src/core/base/js_debugger_config.cpp",
  "$ACE_LITE_PATH/src/core/base/js_fwk_common.cpp",
  "$ACE_LITE_PATH/src/core/base/key_parser.cpp",
  "$ACE_LITE_PATH/src/core/base/lazy_load_manager.cpp",
  "$ACE_LITE_PATH/src/core/base/lazy_load_watcher.cpp",
  "$ACE_LITE_PATH/src/core/base/locale_util.cpp",
  "$ACE_LITE_PATH/src/core/base/number_parser.cpp",
  "$ACE_LITE_PATH/src/core/base/product_adapter.cpp",
  "$ACE_LITE_PATH/src/core/base/string_util.cpp",
  "$ACE_LITE_PATH/src/core/base/system_info.cpp",
  "$ACE_LITE_PATH/src/core/base/time_util.cpp",
  "$ACE_LITE_PATH/src/core/components/abstract_progress_component.cpp",
  "$ACE_LITE_PATH/src/core/components/analog_clock_component.cpp",
  "$ACE_LITE_PATH/src/core/components/camera_component.cpp",
  "$ACE_LITE_PATH/src/core/components/bes_menu_component.cpp",
  "$ACE_LITE_PATH/src/core/components/bes_slide_component.cpp",
  "$ACE_LITE_PATH/src/core/components/bes_drag_view_component.cpp",
  "$ACE_LITE_PATH/src/core/components/drawer_layout_component.cpp",
  "$ACE_LITE_PATH/src/core/components/canvas_component.cpp",
  "$ACE_LITE_PATH/src/core/components/chart_component.cpp",
  "$ACE_LITE_PATH/src/core/components/circle_progress_component.cpp",
  "$ACE_LITE_PATH/src/core/components/clock_hand_component.cpp",
  "$ACE_LITE_PATH/src/core/components/component.cpp",
  "$ACE_LITE_PATH/src/core/components/component_utils.cpp",
  "$ACE_LITE_PATH/src/core/components/div_component.cpp",
  "$ACE_LITE_PATH/src/core/components/event_listener.cpp",
  "$ACE_LITE_PATH/src/core/components/fisheye_menu_component.cpp",
  "$ACE_LITE_PATH/src/core/components/horizon_progress_component.cpp",
  "$ACE_LITE_PATH/src/core/components/image_animator_component.cpp",
  "$ACE_LITE_PATH/src/core/components/image_component.cpp",
  "$ACE_LITE_PATH/src/core/components/input_button_component.cpp",
  "$ACE_LITE_PATH/src/core/components/input_checkbox_component.cpp",
  "$ACE_LITE_PATH/src/core/components/input_radio_component.cpp",
  "$ACE_LITE_PATH/src/core/components/list_adapter.cpp",
  "$ACE_LITE_PATH/src/core/components/list_component.cpp",
  "$ACE_LITE_PATH/src/core/components/marquee_component.cpp",
  "$ACE_LITE_PATH/src/core/components/panel_view.cpp",
  "$ACE_LITE_PATH/src/core/components/picker_view_component.cpp",
  "$ACE_LITE_PATH/src/core/components/qrcode_component.cpp",
  "$ACE_LITE_PATH/src/core/components/scroll_layer.cpp",
  "$ACE_LITE_PATH/src/core/components/slider_component.cpp",
  "$ACE_LITE_PATH/src/core/components/stack_component.cpp",
  "$ACE_LITE_PATH/src/core/components/swiper_component.cpp",
  "$ACE_LITE_PATH/src/core/components/switch_component.cpp",
  "$ACE_LITE_PATH/src/core/components/tab_bar_component.cpp",
  "$ACE_LITE_PATH/src/core/components/tab_content_component.cpp",
  "$ACE_LITE_PATH/src/core/components/tabs_component.cpp",
  "$ACE_LITE_PATH/src/core/components/text_component.cpp",
  "$ACE_LITE_PATH/src/core/components/video_component.cpp",
  "$ACE_LITE_PATH/src/core/components/video_view.cpp",
  "$ACE_LITE_PATH/src/core/context/ace_ability.cpp",
  "$ACE_LITE_PATH/src/core/context/ace_event_error_code.cpp",
  "$ACE_LITE_PATH/src/core/context/fatal_handler.cpp",
  "$ACE_LITE_PATH/src/core/context/js_ability.cpp",
  "$ACE_LITE_PATH/src/core/context/js_ability_impl.cpp",
  "$ACE_LITE_PATH/src/core/context/js_app_context.cpp",
  "$ACE_LITE_PATH/src/core/context/js_app_environment.cpp",
  "$ACE_LITE_PATH/src/core/context/js_framework_raw.cpp",
  "$ACE_LITE_PATH/src/core/context/js_profiler.cpp",
  "$ACE_LITE_PATH/src/core/context/js_timer_list.cpp",
  "$ACE_LITE_PATH/src/core/dialog/js_dialog.cpp",
  "$ACE_LITE_PATH/src/core/directive/descriptor_utils.cpp",
  "$ACE_LITE_PATH/src/core/directive/directive_watcher_callback.cpp",
  "$ACE_LITE_PATH/src/core/modules/app_module.cpp",
  "$ACE_LITE_PATH/src/core/modules/bt_module.cpp",
  "$ACE_LITE_PATH/src/core/modules/dfx_module.cpp",
  "$ACE_LITE_PATH/src/core/modules/dialog_module.cpp",
  "$ACE_LITE_PATH/src/core/modules/presets/cjson_parser.cpp",
  "$ACE_LITE_PATH/src/core/modules/presets/console_log_impl.cpp",
  "$ACE_LITE_PATH/src/core/modules/presets/console_module.cpp",
  "$ACE_LITE_PATH/src/core/modules/presets/date_time_format_module.cpp",
  "$ACE_LITE_PATH/src/core/modules/presets/image_module.cpp",
  "$ACE_LITE_PATH/src/core/modules/presets/intl_module.cpp",
  "$ACE_LITE_PATH/src/core/modules/presets/localization_module.cpp",
  "$ACE_LITE_PATH/src/core/modules/presets/number_format_module.cpp",
  "$ACE_LITE_PATH/src/core/modules/presets/preset_module.cpp",
  "$ACE_LITE_PATH/src/core/modules/presets/profiler_module.cpp",
  "$ACE_LITE_PATH/src/core/modules/presets/render_module.cpp",
  "$ACE_LITE_PATH/src/core/modules/presets/require_module.cpp",
  "$ACE_LITE_PATH/src/core/modules/presets/timer_module.cpp",
  "$ACE_LITE_PATH/src/core/modules/presets/version_module.cpp",
  "$ACE_LITE_PATH/src/core/modules/router_module.cpp",
  "$ACE_LITE_PATH/src/core/modules/sample_module.cpp",
  "$ACE_LITE_PATH/src/core/resource/video_muted_image_res.cpp",
  "$ACE_LITE_PATH/src/core/resource/video_play_image_res.cpp",
  "$ACE_LITE_PATH/src/core/router/js_page_state.cpp",
  "$ACE_LITE_PATH/src/core/router/js_page_state_machine.cpp",
  "$ACE_LITE_PATH/src/core/router/js_router.cpp",
  "$ACE_LITE_PATH/src/core/stylemgr/app_style.cpp",
  "$ACE_LITE_PATH/src/core/stylemgr/app_style_item.cpp",
  "$ACE_LITE_PATH/src/core/stylemgr/app_style_list.cpp",
  "$ACE_LITE_PATH/src/core/stylemgr/app_style_manager.cpp",
  "$ACE_LITE_PATH/src/core/stylemgr/app_style_sheet.cpp",
  "$ACE_LITE_PATH/src/core/stylemgr/condition_arbitrator.cpp",
  "$ACE_LITE_PATH/src/core/wrapper/js.cpp",
  "$ACE_LITE_PATH/targets/platform_adapter.cpp",
]

# bestechnic
ace_lite_sources += [
  "$ACE_LITE_PATH/src/core/components/bestechnic/bes_list_component.cpp",
]
